# microhorario-dl

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
src/microhorario_dl/: __init__.py  consultas.py  ementa.py  exceptions.py  models.py  parser.py  payloads.py  utils.py
