[metadata]
name = microhorario-dl-leinadium
version = 0.2
author = Daniel Guimarães <github@Leinadium>
author_email = daniel.sch.guima@gmail.com
description = Easy PUC-Rio Microhorario downloader
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Leinadium/microhorario-dl
project_urs =
    Bug Tracker = https://github.com/Leinadium/microhorario-dl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src